[package]
name = "slang"
version = "0.1.0"
edition = "2024"
description = "Rust bindings for the Slang shader language compiler"
repository = "https://github.com/minec-aw/slang-rs"
license = "MIT OR Apache-2.0"
categories = ["compilers", "api-bindings"]

[dependencies]
shader-slang-sys = { path = "slang-sys", version = "0.1.0" }

[features]
serde = ["shader-slang-sys/serde"]

[workspace]
members = ["slang-sys"]
