[package]
name = "shader-slang-sys"
version = "0.1.0"
edition = "2024"
description = "FFI bindings for the Slang shader language compiler"
repository = "https://github.com/FloatyMonkey/slang-rs"
license = "MIT OR Apache-2.0"
categories = ["compilers", "external-ffi-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
anyhow = "1"
bindgen = "0.71"
cmake = { version = "0.1", optional = true }

[features]
serde = ["dep:serde"]
from-source = ["dep:cmake"]
